--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,14 +2,46 @@
 <html>
 	<head>
 		<title></title>
+				<style type="text/css">
+			.tile{
+				border: 2px solid black;
+				text-align: center;
+				vertical-align: center;
+				padding: 1px;
+				margin: 10px;
+				display: inline-block;
+				height: 25px;
+				width: 25px;
+				float: left;
+			}
+
+			.placeholder{
+				background-color: gray;
+				margin: 10px;
+				height: 25px;
+				width: 25px;
+				border: 1px dotted blue;
+				float: left;
+			}
+
+			.target{
+				margin: 10px;
+				border: 2px solid red;
+				width: 425px;
+				height: 50px;
+			}
+		</style>
+		<script src="jquery/dist/jquery.js"></script>
+		<script src="jquery-ui/jquery-ui.js"></script>
 		<script src="angular/angular.js"></script>
 		<script src="angular-route/angular-route.js"></script>
+		<script src="angular-ui-sortable/src/sortable.js"></script>
 		<script type="text/javascript">
-			var myApp = angular.module("myApp", ["ngRoute"])
+			var myApp = angular.module("myApp", ["ngRoute", "ui.sortable"])
 
 			// myApp.config(function($routeProvider){
 			// 	$routeProvider
-			// 		.when("/route", {
+			// 		.when("/", {
 			// 			templateUrl: "partials/partial1.html"
 			// 		})
 			// 		.otherwise({
@@ -60,17 +92,52 @@
 					// factory function here
 				}
 			})
+			myApp.controller("testController", function($scope){
+				console.log("Controller exists")
+
+				$scope.tiles = "TUXBASSWORLDSHADOW".split("").sort()
+				$scope.words = {
+					3: $scope.tiles.slice(0,3),
+					4: $scope.tiles.slice(3,7),
+					5: $scope.tiles.slice(7,12),
+					6: $scope.tiles.slice(12,18),
+				}
+				
+				function checkWords(){
+					var word = {}
+					for(var i=3; i < 7; i++){
+						word[i] = $scope.words[i].join("")
+					}
+					console.log(word)
+					if(word[3]=="WORLD" && word[4]=="SHADOW"){
+						alert("That's right!")
+					}
+				}
+
+				$scope.sortableOptions = {
+					placeholder: "placeholder",
+					"ui-floating": true,
+					connectWith: ".target",
+					receive: function(e, ui){
+						if($scope.words[e.target.id].length > 6){
+							ui.item.sortable.cancel()
+						}
+					},
+					update: function(e, ui){
+						setTimeout(function(){
+							checkWords()
+						}, 100)
+					}
+				}
+
+			})
 		</script>
 	</head>
-	<body ng-app="myApp" ng-controller="wordController">
-		<!-- <a href="#/partial1.html">Partial1</a> <-- Links to partials start with # -->
-		<h2>Letters</h2>
-		<h3 ng-if="chosen_word">{{chosen_word}}</h3>
-		<button ng-click="getLetters()">Get letters</button>
-		<ul>
-			<li ng-repeat="(word, score) in words">{{word}}</li>
-		</ul>
-		<div ng-view="">
+	<body ng-app="myApp" ng-controller="testController">
+		<div ui-sortable="sortableOptions" ng-repeat="(index, word) in words" ng-model="word" class="target" id="{{index}}">
+			x{{index}}
+			<div ng-repeat="letter in word track by $index" class="tile">{{letter}}</div>
 		</div>
+		{{words}}
 	</body>
 </html>
