--- a/client/static/style/style.css
+++ b/client/static/style/style.css
@@ -1,28 +1,38 @@
+body{
+	background-color: #F4D6AE;
+}
+
 .tile{
 	border: 2px solid black;
 	text-align: center;
-	vertical-align: center;
-	padding: 1px;
+	vertical-align: middle;
+	padding: 10px 5px;
 	margin: 10px;
 	display: inline-block;
-	height: 25px;
-	width: 25px;
+	height: 35px;
+	width: 45px;
 	float: left;
+	background-color: chocolate;
+	font-weight: bold;
+	font-size: 1.5em;
 }
 
 .placeholder{
 	background-color: gray;
+	padding: 10px 5px;
 	margin: 10px;
-	height: 25px;
-	width: 25px;
+	display: inline-block;
+	height: 35px;
+	width: 45px;
 	border: 1px dotted blue;
 	float: left;
 }
 
 .target{
 	margin: 10px;
-	width: 410px;
-	height: 50px;
+	width: 635px;
+	height: 75px;
+	background-color: #B0926A;
 }
 
 .red{
@@ -38,4 +48,8 @@
 	width: 75px;
 	font-size: 2em;
 	font-weight: bold;
+}
+
+.value{
+	font-size: 0.5em;
 }
